--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,27 +1,72 @@
-Ver: 4
+##################################
+#                                #
+#     PlayerBirthday - Karma     #
+#                                #
+#                                #
+#        Celebrate users         #
+#           birthdays            #
+#                                #
+##################################
+
+#Birthday song options
 Song:
+  #Enable song?
   enabled: true
+  #Song file name
   Name: Birthday
+
+#Birthday fireworks options
 Firework:
+  #Enable fireworks?
   enabled: true
+  #Firework's power (speed)
   power: 2
+  #Fireworks amount
   amount: 3
+
+#How and where will
+#player data stored?
+#
+# Available:
+#
+# FILE - MYSQL
 DataSys: FILE
+
+#Manage plugin update system
 Update:
+  #Notify when an update is available
   NotifyUpdated: false
+  #Send the changelog to console when
+  #there's a new update
   Changelog: true
+  #Update checks interval (in minutes)
   Interval: 5
+  #Download the .jar into /update folder
   UpdateFolder: true
+
+#MySQL options
 MySQL:
+  #MySQL host
   Host: localhost
+  #MySQL port (the default is 3306)
   Port: 3306
+  #MySQL server user account name
   User: root
+  #MySQL server user account password
   Password: ""
+  #Database name for the plugin
   Database: server_database
+  #Name of the table used by the plugin
   Table: bth_birthday
+  #Enable ssl connection through server
   SSL: false
+  #MySQL connection options
   Connection:
+    #Min connections allowed
     Min: 3
+    #Max connections allowed
     Max: 10
+    #Connection timeout (in seconds)
     TimeOut: 40
+    #Connection life time (in seconds)
     LifeTime: 300
