--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ml.karmaconfigs</groupId>
     <artifactId>PlayerBTH</artifactId>
-    <version>2.1.7</version>
+    <version>2.1.8</version>
     <packaging>jar</packaging>
 
     <name>PlayerBTH</name>
@@ -18,6 +18,7 @@
     </properties>
 
     <build>
+        <finalName>PlayerBTH</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -49,7 +50,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fully.qualified.MainClass</mainClass>
+                            <mainClass>ml.karmaconfigs.playerbth.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -92,6 +93,10 @@
             <id>CodeMC</id>
             <url>https://repo.codemc.org/repository/maven-public</url>
         </repository>
+        <repository>
+            <id>KarmaYaml-master</id>
+            <url>https://github.com/KarmaConfigs/Repos/raw/KarmaYaml/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -118,6 +123,18 @@
             <artifactId>json</artifactId>
             <version>20151123</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>ml.karmaconfigs</groupId>
+            <artifactId>KarmaYaml</artifactId>
+            <version>1.2.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.6</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
