--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -12,7 +12,8 @@ Prefix: "&bBirthday &7&l➡ "
 Set: "&aYour birthday have been set on &7{day}&f/&7{month}"
 SetAge: "&aYour birthday have been set on &7{day}&f/&7{month} &a- &7{age}&a years old"
 AlreadySet: "&cYou already set your birthday &7&l&o( &e{day}&7/&e{month} &7&l&o)"
-NotSet: "&cYour birthday it's not set"
+NotSet: "&cYour birthday is not set"
+TargetNotSet: "&cBirthday of {player} is not set"
 Removed: "&aSuccessfully removed &3{player}&a's birthday"
 CantRemove: "&cPlayer &e{player}&c doesn't have a birthday"
 SpecifyPlayer: "&cPlease, specify a player"
